hphp/test/zend/good/Zend/tests/errmsg_009.php.expectf
Fatal error: Properties cannot have multiple visibility modifiers in %s/errmsg_009.php on line 4
